--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </main>
 
     <footer>
-      <p>Mastering Smart Money Concept &copy; 2024, Whilyan Pratama</p>
+      <p>Mastering Smart Money Concept &copy; 2024, Nath Custodial</p>
     </footer>
     <script src="script.js"></script>
   </body>
